--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="artist">Artist</string>
     <string name="album">Album</string>
     <string name="hint">Search...</string>
+    <string name="popular">Popular Tracks</string>
 
 </resources>
