--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SpotiMyAndroid</string>
+    <string name="app_name">SpotiMy</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_dashboard">Dashboard</string>
